<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Simple Weather</string>
    <string name="hintSearchBar">Search a place…</string>
    <string name="loadingText">This won\'t take too much…</string>
    <string name="lblHumidity">Humidity</string>
    <string name="lblPressure">Pressure</string>
    <string name="lblWindSpeed">Wind speed</string>
    <string name="lblWindDirection">Wind direction</string>
    <string name="lblVisibility">Visibility</string>

    <!-- Error messages -->
    <string name="errInternetTitle">No internet connection</string>
    <string name="errInternetMessage">The internet connection is not available, check the settings and try again.</string>
    <string name="close">Close</string>
    <string name="errPermission">Without permission IP location will be used.</string>
    <string name="errLocationOff">Location services seem off, please check your settings.</string>
    <string name="errNoResultsTitle">Ops! No results found…</string>
    <string name="errNoResultsMessage">We did not find what you were looking for.\nTry changing your search terms or checking for typing errors.\nThank you!</string>
    <!-- Google Play Services -->
    <string name="gmsWarningTitle">Limited functionalities</string>
    <string name="gmsWarningMessage">This app requires Google Play Services to work properly.\nWithout it, you will not
        be able to use your live location.
    </string>
    <string name="gpsRationaleTitle">We care about your privacy</string>
    <string name="gpsRationaleMessage">To provide you with the most accurate weather forecasts we would need your
        approximate location.\nYou can always opt out and receive predictions based on your internet location.\nWe will
        not share anything with third parties.
    </string>

    <!-- Accessibility -->
    <string name="descrCityIcon">A rounded icon representing a block of buildings</string>
</resources>