<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent"
              android:paddingTop="?attr/actionBarSize">

	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	          android:id="@+id/lblNow" android:textSize="32sp"
	          android:textStyle="bold"
	          android:textAlignment="center"/>

	<Space android:layout_width="match_parent" android:layout_height="10dp"/>

	<TextView android:id="@+id/lblIcoNow"
	          android:layout_height="wrap_content"
	          android:layout_width="wrap_content"
	          android:layout_gravity="center_horizontal"
	          android:text="..."
	          android:textSize="96sp" android:textColor="#616161"/>

	<Space android:layout_width="match_parent" android:layout_height="10dp"/>

	<TextView android:id="@+id/lblTempNow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:textAlignment="center"
	          android:textSize="64sp" android:textStyle="bold"/>

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		          android:id="@+id/lblTempMax" android:textStyle="bold" android:layout_gravity="center"
		          android:textSize="16sp"/>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		          android:id="@+id/lblTempMin" android:textColor="@color/material_dynamic_neutral50"
		          android:textStyle="bold" android:layout_gravity="center"
		          android:textSize="16sp"/>
	</LinearLayout>

	<Space android:layout_width="match_parent" android:layout_height="10dp"/>

	<TextView android:id="@+id/lblHumidity"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/lblHumidity"
	          android:padding="8dp"/>

	<TextView
			android:text="@string/lblVisibility"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/lblVisibility"
			android:padding="8dp"/>

	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	          android:id="@+id/lblPressure"
	          android:text="@string/lblPressure"
	          android:padding="8dp"/>

	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	          android:id="@+id/lblWindSpeed"
	          android:text="@string/lblWindSpeed"
	          android:padding="8dp"/>

	<TextView android:layout_width="match_parent" android:layout_height="wrap_content"
	          android:id="@+id/lblWindDirection"
	          android:text="@string/lblWindDirection"
	          android:padding="8dp"/>

</LinearLayout>